[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-notify-mcp"
version = "0.1.1"
description = "Universal MCP notification relay — polls MCP servers and streams change events as log notifications"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tharindu Mendis" }]
keywords = ["mcp", "notification", "agent", "telegram", "polling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/tharindumendis/agent-notify"
Source = "https://github.com/tharindumendis/agent-notify"
Tracker = "https://github.com/tharindumendis/agent-notify/issues"

[project.scripts]
agent-notify = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"notify_config.yaml" = "notify_config.yaml"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist]
include = [
    "core/",
    "server.py",
    "notify_config.yaml",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
